更新项目文档和功能优化 - 添加PRD文档更新、图片资源和功能修复记录

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>图片字幕生成器 @Avis</title>
+    <title>图片字幕生成器 Avis@CineScript</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>图片字幕生成器 @Avis</h1>
+        <h1>图片字幕生成器 Avis@CineScript</h1>
     </header>
     
     <main class="main-container">
@@ -131,4 +131,4 @@
     
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
